Test Data/BPP/BPP-MELA-5/outputs/bpp-black_box/2025-07-19_10-54-44/problem_iter2_stdout_5.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/bpp/main.py", line 9, in <module>
    import gpt
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\bpp\gpt.py", line 9
    h = np.where(mask, 1/(abs(sizes[i]+sizes[j]-node_constraint)+1e-6, 0)
                ^
SyntaxError: '(' was never closed
